# mAP-web-ui

./: .editorconfig  Dockerfile  LICENSE  README.md  compose.yaml  content.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: deps.sh  dev.compose.yaml  devcontainer.json
app/components/: AppFooter.vue  AppHeader.vue  AppLogo.vue  AppSideMenu.vue  EmbeddedDs.vue  HeaderSearch.vue
app/components/user/: UserForm.vue  UserView.vue
app/composables/: data.json  locales.ts
app/i18n/locales/: en.json  ja.json
app/layouts/: auth.vue  default.vue  docs.vue
app/pages/: cache.vue  history.vue  index.vue  login.vue  logout.vue
app/pages/groups/: index.vue  new.vue
app/pages/help/: [...slug].vue  index.vue
app/pages/repos/: index.vue
app/pages/users/: index.vue  new.vue
app/types/: resources.ts
configs/: app.config.ts  server.config.toml
content/1.help/1.user/: 1.create-users.md  2.update-users.md
content/1.help/2.groups/: 1.create-groups.md
nginx/: Dockerfile  shibboleth2.xml  supervisord.conf
nginx/conf.d/: app.dev.inc  default.conf
nginx/ssl/: gen_key.sh
server/: config.py  const.py  ext.py  factory.py  worker.py
server/client/: users.py
server/loggings/: setup.py
server/schema/: map_group.py  map_user.py
server/views/: users.py
src/app/: app.vue
src/app/components/: EmbeddedDs.vue
src/app/pages/: index.vue  login.vue
src/server/: __init__.py  app.py  celery.py  config.py  const.py  factory.py
src/server/api/: router.py
tests/schema/: test_map_user.py
(+17 files in other folders)
