[project]
name = "map-web-ui"
version = "0.1.0"
description = "Web client for managing JAIRO Cloud groups."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.1",
    "sqlalchemy-utils>=0.42.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest"
lint = "uvx ruff check"
format = "uvx ruff format"
typecheck = "pyright"

[tool.pytest.ini_options]
pythonpath = ["server"]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["server"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.ruff]
fix = true

[tool.pyright]
extraPaths = ["server"]
typeCheckingMode =  "standard"
